# news

.github/workflows/: push.yml
notifications/: README.md  pyproject.toml  update.sh
notifications/src/app/: equity_news_to_mm.py  jp_news_to_mm.py  main.py  tech_news_to_mm.py  top_news_to_mm.py  usa_news_to_mm.py
notifications/src/top_news_to_mm/: Dockerfile  app.py  requirements.txt
