[project]
name = "apps"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "okmtdev", email = "okmtdev@gmail.com" }
]
dependencies = [
    "openpyxl>=3.1.2",
    "python-lambda-local>=0.1.13",
    "setuptools>=69.2.0",
    "mattermostdriver>=7.3.2",
    "pytz>=2024.1",
    "httpx>=0.27.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
